# Cutter2

hypnagogic_cli/: Cargo.toml
hypnagogic_core/: Cargo.toml
hypnagogic_core/src/config/blocks/: generators.rs
hypnagogic_core/src/generation/: icon.rs
hypnagogic_core/src/operations/cutters/: bitmask_dir_visibility.rs  bitmask_slice.rs
in_test/res/: tall-5-corners-dirvis.png.toml
