[package]
name = "hypnagogic-core"
version = "3.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
dmi = "0.3.5"
enum_dispatch = "0.3"
enum-iterator = "2.1.0"
fixed-map = { version = "0.9.5", features = ["serde"] }
image = { version = "0.25.2", default-features = false, features = ["png", "gif"] }
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8.19"
tracing = "0.1"
user-error = "1.2.8"
